[metadata]
name = licorice
version = 0.0.4
description = Linux Comodular Realtime Interactive Compute Environment
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
author = Stanford Brain Interfacing Laboratory
author_email = licorice@bil.stanford.edu
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = licorice
include_package_data = True

[options.entry_points]
console_scripts =
    licorice = licorice.cli:main

[flake8]
exclude =
    examples/run
per-file-ignores =
    ./examples/modules/*.py: F401,F821
